--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="fr.enoent.videokit.MainActivity" >
-
+// This is Button
     <Button
         android:id="@+id/btn_concat"
         android:layout_width="wrap_content"
